add form and filter plugin

--- a/index.html
+++ b/index.html
@@ -1,30 +1,127 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-      <div class="container">
-          <div class="row">
-              <div class="col-md-12 text-center">
-                  <h1>Canvas Chemestry</h1>
+<head>
+  <title>Title</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-                  <canvas>  </canvas>
-              </div>
-          </div>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h1>Canvas Chemestry</h1>
+
+        <canvas> </canvas>
       </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="canvas.js"></script>
-  </body>
+    </div>
+  </div>
+
+  <div class="container" style="padding: 100px 0; text-align: center;">
+    <div class="row ull">
+      <ul>
+
+      </ul>
+    </div>
+  </div>
+
+  <!-- crus dom -->
+  <div class="container" style="padding: 100px 0;">
+    <div class="row">
+      <div class="col-md-12">
+        <h5>add item</h5>
+        <form id="form">
+          <input type="text" id="name">
+          <input type="submit" value="submit" id="sub">
+        </form>
+        <ul id="items">
+
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <!-- portfolio -->
+
+  <div class="portfolio" style="padding: 100px 0;">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h2>my protfolio</h2>
+          <ul id="prot">
+            <li class="active" data-target="all">all</li>
+            <li data-target="one">one</li>
+            <li data-target="two">tow</li>
+            <li data-target="three">three</li>
+            <li data-target="four">fourth</li>
+            <li data-target="five">five</li>
+          </ul>
+        </div>
+      </div>
+      <div class="row items" text-center>
+        <div class="col-md-3" data-id="one">
+          <div class="single-one">
+            <img src="img/contact.jpg" alt="" style="width: 100%; height: 250px;">
+          </div>
+        </div>
+        <div class="col-md-3" data-id="two">
+          <div class="single-one">
+            <img src="img/event1.jpg" alt="" style="width: 100%; height: 250px;">
+          </div>
+        </div>
+        <div class="col-md-3" data-id="three">
+          <div class="single-one">
+            <img src="img/event2.jpg" alt="" style="width: 100%; height: 250px;">
+          </div>
+        </div>
+        <div class="col-md-3" data-id="four">
+          <div class="single-one">
+            <img src="img/event3.jpg" alt="" style="width: 100%; height: 250px;">
+          </div>
+        </div>
+        <div class="col-md-3" data-id="five">
+          <div class="single-one">
+            <img src="img/gallery3.jpg" alt="" style="width: 100%; height: 250px;">
+          </div>
+        </div>
+        <div class="col-md-3" data-id="one">
+          <div class="single-one">
+            <img src="img/gallery4.jpg" alt="" style="width: 100%; height: 250px;">
+          </div>
+        </div>
+        <div class="col-md-3" data-id="three">
+          <div class="single-one">
+            <img src="img/gallery5.jpg" alt="" style="width: 100%;">
+          </div>
+        </div>
+        <div class="col-md-3" data-id="two">
+          <div class="single-one">
+            <img src="img/contact.jpg" alt="" style="width: 100%;">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
+  <script src="canvas.js"></script>
+</body>
+
 </html>
